<resources>
    <string name="app_name">Todo App</string>
    <!--activity_login-->
    <string name="login_logo">Login logo</string>
    <string name="tWelcome_login">Welcome in Todo App</string>
    <string name="tNama_login">Nama</string>
    <string name="etNama_login">Masukkan Nama</string>
    <string name="tPassword_login">Password</string>
    <string name="etPassword_login">Masukkan Password</string>
    <string name="bsignin_login">Sign In</string>
    <string name="tNew_login">New in Todo App?</string>
    <string name="tRegister_login">Register</string>
    <!--activity_register-->
    <string name="register_logo">Register logo</string>
    <string name="tRegister_register">Register</string>
    <string name="tNama_register">Nama</string>
    <string name="etNama_register">Masukkan Nama</string>
    <string name="tEmail_register">E-Mail</string>
    <string name="etEmail_register">Masukkan E-Mail</string>
    <string name="tPassword_register">Password</string>
    <string name="etPassword_register">Masukkan Password</string>
    <string name="tRePassword_register">Re-Password</string>
    <string name="etRePassword_register">Masukkan ulang Password</string>
    <!--activity_task-->
    <string name="tWelcome_task">Selamat Datang</string>
    <string name="tNama_task">Nama</string>
    <string name="tTitle_task">Task</string>
    <string name="tTask_task">Task</string>
    <string name="etNamaTask_task">Masukkan Task</string>
    <string name="tJenis_task">Jenis Task</string>
    <string name="etJenis_task">Masukkan Jenis Task</string>
    <string name="tTime_task">Time Task</string>
    <string name="etTime_task">Masukkan Time Task</string>
    <string name="fabAdd_task">Tambah Task</string>
    <!--activity_result-->
    <string name="tTitle_result">Task</string>
    <string name="tTask_result">Task</string>
    <string name="tNamaTask_result">Nama Task</string>
    <string name="tJenis_result">Jenis</string>
    <string name="tJenisTask_result">Jenis Task</string>
    <string name="tTime_result">Time</string>
    <string name="tTimeTask_result">Time Task</string>
    <!--menu-->
    <string name="mSubmit">Submit</string>
    <string name="mLogout">Logout</string>
</resources>