<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".activity_result">

    <TextView
        android:id="@+id/tTitle_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tTitle_result"
        android:textColor="#80FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tTask_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tTask_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tTitle_result"
        app:layout_constraintTop_toBottomOf="@+id/tTitle_result"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tNamaTask_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tNamaTask_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tTitle_result"
        app:layout_constraintTop_toBottomOf="@+id/tTask_result"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tJenis_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tJenis_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tTitle_result"
        app:layout_constraintTop_toBottomOf="@+id/tNamaTask_result"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tJenisTask_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tJenisTask_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tJenis_result"
        app:layout_constraintTop_toBottomOf="@+id/tJenis_result"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tTime_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tTime_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tJenisTask_result"
        app:layout_constraintTop_toBottomOf="@+id/tJenisTask_result"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tTimeTask_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tTimeTask_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tTime_result"
        app:layout_constraintTop_toBottomOf="@+id/tTime_result"
        app:layout_constraintVertical_bias="0.03" />
</androidx.constraintlayout.widget.ConstraintLayout>