<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".activity_login">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/login_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/logo_task"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tWelcome_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tWelcome_login"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/img_login"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tNama_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tNama_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/tWelcome_login"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/etNama_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/textview_background"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etNama_login"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/tNama_login"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tPassword_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPassword_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/etNama_login"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/etPassword_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:hint="@string/etPassword_login"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPassword"
        android:padding="12dp"
        android:password="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/tPassword_login"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btSignin_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/bsignin_login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/etPassword_login"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tNew_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tNew_login"
        android:textColor="#BABABA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/btSignin_login"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tRegister_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tRegister_login"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_login"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/tNew_login"
        app:layout_constraintTop_toBottomOf="@+id/btSignin_login"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>